chart spacing issue resolve

--- a/src/pages/admin/studios/studio.module.css
+++ b/src/pages/admin/studios/studio.module.css
@@ -1672,7 +1672,7 @@ td {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 3% ;
+    gap: 3%;
   }
   > div:last-child {
     width: 30%;
@@ -1681,7 +1681,7 @@ td {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    gap: 5% ;
+    gap: 5%;
   }
 }
 .chartlogo {
@@ -1695,8 +1695,8 @@ td {
   font-size: 1vmax;
   font-weight: 700;
 }
-.chartSelect{
-  min-width:20%;
+.chartSelect {
+  min-width: 20%;
   height: 40%;
   background-color: #ffc701;
   border: 2px solid #ffc701;
@@ -1717,13 +1717,12 @@ td {
   > div {
     width: 45%;
     height: 80%;
-     /* border: 2px solid yellow; */
-     
+    /* border: 2px solid yellow; */
   }
 }
 .overviewPage3 {
   width: 100%;
-  min-height: 110vh;
+  min-height: 130vh;
   /* border: 2px solid red; */
   display: flex;
   align-items: center;
@@ -1733,37 +1732,34 @@ td {
   > div {
     width: 100%;
     min-height: 40%;
-     /* border: 2px solid yellow; */
-     
+    /* border: 2px solid yellow; */
   }
 }
 .overviewPage4 {
   width: 100%;
   min-height: 60vh;
   /* border: 2px solid red; */
-  >div{
+  > div {
     width: 100%;
     height: 100%;
   }
- 
 }
-.donutChartDiv{
+.donutChartDiv {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   position: relative;
 }
-.customTooltip{
+.customTooltip {
   background-color: white;
-  width:fit-content;
+  width: fit-content;
   height: fit-content;
   font-size: 1vmax;
   padding: 0.2em;
   border-radius: 10px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
-
 
 @media only screen and (min-width: 1024px) and (max-width: 1903px) {
   .addNewStudioPage .addNewStudioinputBox {
